@@ -15,6 +15,7 @@ Verilator 5.035 devel
 
 * Change `--output-groups` to default to value of `--build-jobs` (#5751).
   Those using build farms may need to now use `--output-groups 0` or otherwise.
+* Add check for `let` misused in statement context (#5733).
 * Add used language to `--preproc-resolve` output (#5795). [Kamil Rakoczy, Antmicro Ltd.]
 * Fix reset of automatic function variables (#5747). [Augustin Fabre]
 
